--- a/miniprogram/pages/adminNotice/adminNotice.wxml
+++ b/miniprogram/pages/adminNotice/adminNotice.wxml
@@ -1,19 +1,15 @@
 <wxs module="Date" src="../../third-part/date.wxs"></wxs>
 <i-blank wx:if="{{showBlank}}"></i-blank>
 <view wx:for='{{applys}}' wx:for-index='index' data-index="{{index}}" bindtap="showActionSheet">
-	<i-card title="{{item.job.name}}" thumb="{{item.avatar_url}}" extra="{{item.state}}" full='true'>
+	<notice thumb="{{item.avatar_url}}" reason="{{item.reason}}" state="{{item.state}}" title="{{item.job.name}}">
 		<view slot="content">
-			<view wx:if='{{item.reason}}'>拒绝理由：{{item.reason}}</view>
-			<view class="caption-wrap">
-				<i-collapse name="岗位简介">
-					<i-collapse-item title="岗位简介" name="岗位简介">
-						<view slot="content"><text space="nbsp">{{item.job.introduction}}</text></view>
-					</i-collapse-item>
-				</i-collapse>
+			<view class="content">
+				岗位简介：
+				<text space="nbsp">{{item.job.introduction}}</text>
 			</view>
 		</view>
 		<view slot="footer">申请日期：{{Date.toLocaleString(item.apply_time) }}</view>
-	</i-card>
+	</notice>
 </view>
 <i-load-more i-class="loadmore" wx:if="{{showLoadmore}}" tip="正在加载更多" loading />
 <!-- 占位用防止被tabbar挡住 -->
