--- a/miniprogram/pages/jobs/jobs.wxss
+++ b/miniprogram/pages/jobs/jobs.wxss
@@ -61,3 +61,26 @@
   animation-duration:0.3s;
   animation-fill-mode:forwards;
 }
+
+.background{
+  background-color: #2b85e4;
+  width: 100%;
+  height: 30vh;
+  border-radius: 0 0 60% 60%/ 0 0 20% 20%;
+  z-index: -1;
+  position: fixed;
+  top:0;
+  text-align: center;
+}
+.background image{
+  width: 300px;
+  height: 70px;
+  margin-top: 30px;
+}
+.job-view{
+  width: 95%;
+  margin-right: auto;
+  margin-left: auto;
+  margin-bottom: 8px;
+}
+
