--- a/miniprogram/pages/login/login.wxml
+++ b/miniprogram/pages/login/login.wxml
@@ -1,17 +1,10 @@
+<view class="background">
+	<image src="/images/backgroundtext.png"></image>
+</view>
+<!-- 滑窗 -->
+<Swiper currentIndex="{{current}}" imgUrls="{{imgUrls}}" bind:onChange="changeIdentity"/>  
+<!-- 登录按钮 -->
 <view class="container">
-	<view class="tip">滑动选择身份</view>
-  <!-- 滑动窗口 -->
-	<view class='swiper'>
-		<swiper indicator-dots="true" circular='true' bindchange='changeIdentity'>
-			<block wx:for="{{userIdentity}}" wx:key="index">
-				<swiper-item class="swiper-item">
-					<image src="{{item.imagePath}}"></image>
-					<view>{{item.identity}}</view>
-				</swiper-item>
-			</block>
-		</swiper>
-	</view>
-  <!-- 登录按钮 -->
 	<i-button type="primary" shape="circle" size="small" loading="{{loading}}" open-type='getUserInfo' bindgetuserinfo='login'>登录</i-button>
 </view>
 <!-- 密码弹窗 -->
