--- a/miniprogram/pages/login/login.wxss
+++ b/miniprogram/pages/login/login.wxss
@@ -1,25 +1,62 @@
 /* miniprogram/pages/login/login.wxss */
-page{
+page {
   height: 100%;
 }
-.container{
-  height: 100%;
+
+.tip {
+  margin-bottom: 20px;
+}
+
+.swiper {
+  width: 30vw;
+}
+
+.swiper-item {
+  text-align: center;
+  background-color: antiquewhite;
+  /* padding-top:20px; */
+  border-radius: 10px;
+}
+
+.swiper-item image {
+  width: 80px;
+  height: 80px;
+  margin-top: 20px;
+}
+
+.swiper-item view {
+  color: white;
+}
+
+Swiper {
+  margin-top: 25vh;
+  width:550rpx;
+  margin-left:auto;
+  margin-right: auto;
+}
+.container {
+  position: absolute;
+  width: 100%;
+  top: 60vh;
   display: flex;
   justify-content: center;
 }
-.tip{
-  margin-bottom: 20px;
-}
-.swiper{
-  width: 40%;
-}
-.swiper-item{
-  text-align: center;
-}
-.swiper-item image{
-  width: 80px;
-  height: 80px;
-}
-i-button{
+i-button {
   width: 80%;
 }
+.background{
+  background-color: #2b85e4;
+  width: 100%;
+  height: 30vh;
+  border-radius: 0 0 60% 60%/ 0 0 20% 20%;
+  z-index: -1;
+  position: fixed;
+  top:0;
+  text-align: center;
+}
+.background image{
+  width: 300px;
+  height: 70px;
+  margin-top: 30px;
+}
+
